Fix color contrast accesibility on blog-details

--- a/scss/core/pages/blog-detail.scss
+++ b/scss/core/pages/blog-detail.scss
@@ -75,7 +75,7 @@
   }
 
   .#{$prefijo}date-publish{
-    color: #bfbfbf;
+    color: #333;
     position: relative;
     left: 0;
     top: 0;
